# StreamKit

./: Cargo.toml  README.md  build.rs
codecs/aac/: Cargo.toml
codecs/aac/src/: aac_codec.rs  adts.rs  config.rs  lib.rs
codecs/aac/src12/: config.rs
codecs/av1/: Cargo.toml
codecs/h264/: Cargo.toml
codecs/h264/src/: annexb.rs  avcc.rs  config.rs  error.rs  lib.rs  nal.rs  sps.rs
codecs/h265/: Cargo.toml
codecs/h265/src/: annexb.rs  config.rs  error.rs  hvcc.rs  lib.rs  nal.rs
containers/mp4/: Cargo.toml
containers/mp4/src/: codec.rs  lib.rs
containers/mp4/src/boxes/types/: avc1.rs  avcc.rs  ftyp.rs  hvcc.rs  moov.rs  mp4a.rs  stsd.rs  traf.rs
containers/mpegts/: Cargo.toml
containers/mpegts/src/: crc.rs  demux.rs  demuxer.rs  error.rs  lib.rs  packet_header.rs  pes.rs  pid.rs  stream_type.rs
containers/mpegts/src/section/: mod.rs  pat.rs  pes_header.rs  pmt.rs
core/bytesio/: Cargo.toml
core/bytesio/src/: lib.rs
core/common/src/: lib.rs
core/exp_golomb/: Cargo.toml
scripts/: tune.sh
src/: lib.rs  main.rs  metrics.rs  mpegts_ingest.rs  option.rs  segment_store.rs  session.rs  srt.rs  store.rs
src/fmp4/: aac.rs  mod.rs
src/fmp4/codec/: aac.rs  h264.rs  h265.rs  mod.rs
src/hls/: m3u8.rs  mod.rs  segment_store.rs
src/mpegts/: adts.rs  mod.rs  pcr.rs  scte.rs
src/mpegts/codec/: aac.rs
src/routes/: mod.rs
src/session/: connection.rs  manager.rs  mod.rs
vendors/srt-rs/: Cargo.toml
vendors/srt-rs/libsrt-sys/: Cargo.toml  build.rs
vendors/srt-rs/libsrt-sys/src/: lib.rs
vendors/srt-rs/src/: epoll.rs  error.rs  lib.rs  log.rs  socket.rs  stream.rs
