[package]
name = "stream_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.3"
anyhow = "1.0"
toml = "0.7.3"
clap = { version = "4.2.1", features = ["derive", "env"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["full"] }