[package]
name = "stream_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.3"
anyhow = "1.0"
toml = "0.7.3"
axum = { version = "0.6.18", features = ["tokio"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4.0"

# Internal Packages

srt-rs = { path = "vendors/srt-rs", version = "0.1.0" }
