[package]
name = "stream_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.3"
anyhow = "1.0"
toml = "0.7.3"
axum = { version = "0.6.19", features = ["tokio"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4.0"
bytes = "1"

# Media Deps
mpeg2ts-reader = "0.15.0"
scte35-reader = "0.14.0"

# Internal Packages

bytesio = { path = "core/bytesio", version = "0.0.1" }
exp_golomb = { path = "core/exp_golomb", version = "0.1.0" }
srt-rs = { path = "vendors/srt-rs", version = "0.1.0" }
mp4 = { path = "containers/mp4", version = "0.0.1" }
aac = { path = "codecs/aac", version = "0.1.0" }
av1 = { path = "codecs/av1", version = "0.1.0" }
h264 = { path = "codecs/h264", version = "0.1.0" }
h265 = { path = "codecs/h265", version = "0.1.0" }