[package]
name = "mp4"
version = "0.0.1"
edition = "2021"

[dependencies]
byteorder = "1"
bytes = "1"
fixed = "1"
casey = "0"
paste = "1"

bytesio = { path = "../../core/bytesio", default-features = false, features = []}
aac = { path = "../../codecs/aac" }
av1 = { path = "../../codecs/av1" }
h264 = { path = "../../codecs/h264" }
h265 = { path = "../../codecs/h265" }
