[package]
name = "mpegts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
byteorder = "1"
chrono = "0.4.26"
bytesio = { path = "../../core/bytesio" }
anyhow = "1"
thiserror = "1"
log = "0.4"