[package]
name = "srt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "1.5.2" }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2.126"
log = "0.4"
os_socketaddr = "0.2.4"
futures = "0.3"
